--- a/Web/Views/Item/List.cshtml
+++ b/Web/Views/Item/List.cshtml
@@ -5,6 +5,10 @@
     Layout = "_Layout";
 }
 
+@section CSS{
+    <link rel="stylesheet" href="~/lib/notyf/notyf.min.css">
+}
+
 <h2 class="mb-3">List of Food</h2>
 <table class="table table-bordered table-hover" id="itemsTable" >
     <thead >
@@ -28,6 +32,7 @@
                 <td>@item.Category.Name</td>
                 <td>@item.Brand.Name</td>
                 <td>
+                    <input type="hidden" name="ItemId" value="@item.ItemId">
                     <button class="btn btn-primary"><i class="fas fa-eye"></i> See</button>
                     <button class="btn btn-warning"><i class="fas fa-pencil-alt"></i> Edit</button>
                     <button class="btn btn-danger mt-1"><i class="fas fa-trash-alt"></i> Delete</button>
@@ -55,7 +60,8 @@
 
 @section Scripts{
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.23/datatables.min.js"></script>
-    <script src="~/js/Item/ItemList.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/notyf/notyf.min.js"></script>
+    <script src="~/js/Item/ItemList.js"></script>
 }
