--- a/Web/Views/Item/_Add.cshtml
+++ b/Web/Views/Item/_Add.cshtml
@@ -8,7 +8,6 @@
         <span class="text-danger" asp-validation-for="Name"></span>
     </div>
 
-
     <label asp-for="Price"></label><span class="text-danger">*</span>
     <div class="input-group">
         <div class="input-group-prepend">
@@ -16,12 +15,15 @@
         </div>
         <input type="text" class="form-control" asp-for="Price" placeholder="1 , 23.5 , 50.23">
     </div>
+    
     <span class="text-danger" asp-validation-for="Price"></span>
     <div class="mb-3"></div>
+
     <div class="form-group">
-        <label asp-for="Description"></label><span class="text-danger">*</span>
-        <input type="text" class="form-control" asp-for="Description" placeholder="Unique in it's class...">
-        <span class="text-danger" asp-validation-for="Description"></span>
+        <label asp-for="Categories"></label><span class="text-danger">*</span>
+        <select asp-for="CategoryId" asp-items="@Model.Categories" class="custom-select">
+        </select>
+        <span class="text-danger" asp-validation-for="CategoryId"></span>
     </div>
 
     <div class="form-group">
@@ -38,35 +40,12 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="Categories"></label><span class="text-danger">*</span>
-        <select asp-for="CategoryId" asp-items="@Model.Categories" class="custom-select">
-        </select>
-        <span class="text-danger" asp-validation-for="CategoryId"></span>
+        <label asp-for="Description"></label><span class="text-danger">*</span>
+        <textarea class="form-control" asp-for="Description" placeholder="Unique in it's class..." rows="3"></textarea>
+        <span class="text-danger" asp-validation-for="Description"></span>
     </div>
 
     <button class="btn btn-success">Save Changes</button>
     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+
 </form>
-
-
-
-
-@* <script> *@
-@* $("#CategoryId").on("change", function () { *@
-@* var categoryId = $(this).val(); *@
-@* $.ajax({ *@
-@* method: 'get', *@
-@* url: '/Item/GetSubCategories?categoryId=' + categoryId, *@
-@* success: function (result) { *@
-@* var htmlString = ""; *@
-@* for (var i = 0; i < result.length; i++) { *@
-@* htmlString += "<input type='checkbox' name='subCategories' value = '" + result[i].subCategoryId + "' />"; *@
-@* htmlString += "<label>"+result[i].name+"</label>" *@
-@* } *@
-@* $("#subcategories").append(htmlString); *@
-@* } *@
-@* *@
-@* }) *@
-@* *@
-@* }) *@
-@* </script> *@
